--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -3,9 +3,15 @@
 @tailwind utilities;
 @layer components {
   .center-container {
-    @apply h-full ml-auto mr-auto;
+    @apply h-full container ml-auto mr-auto;
   }
   .button {
     @apply px-4 py-2 bg-sky-400 hover:bg-sky-500 text-white rounded-md;
+  }
+  .page-wrapper {
+    @apply container mx-auto min-h-screen;
+  }
+  .page {
+    @apply w-11/12 md:w-3/4 h-full mx-auto mt-20 mb-12 flex flex-col space-y-10;
   }
 }
