--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -14,4 +14,7 @@
   .page {
     @apply w-11/12 md:w-3/4 h-full mx-auto mt-20 mb-12 flex flex-col space-y-10;
   }
+  .clearfix {
+    @apply before:border before:content-[''] before:table before:clear-both before:w-full before:bg-black;
+  }
 }
