Feat: Report UI

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -17,4 +17,7 @@
   .clearfix {
     @apply before:border before:content-[''] before:table before:clear-both before:w-full before:bg-black;
   }
+  .dialog {
+    @apply fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-gray-200 backdrop:bg-black/70;
+  }
 }
